--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"lint:css": "stylelint '**/*.svelte'",
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
@@ -21,10 +22,17 @@
 		"eslint": "^8.36.0",
 		"eslint-config-prettier": "^8.7.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"postcss-html": "^1.5.0",
 		"prettier": "^2.8.4",
 		"prettier-plugin-svelte": "^2.9.0",
 		"qrcode": "^1.5.1",
 		"sass": "^1.59.2",
+		"stylelint": "^15.2.0",
+		"stylelint-config-html": "^1.1.0",
+		"stylelint-config-recess-order": "^4.0.0",
+		"stylelint-config-standard-scss": "^7.0.1",
+		"stylelint-order": "^6.0.3",
+		"stylelint-scss": "^4.4.0",
 		"svelte": "^3.56.0",
 		"svelte-check": "^3.1.2",
 		"svelte-preprocess": "^5.0.1",
