--- a/package.json
+++ b/package.json
@@ -10,7 +10,22 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"lint:css": "stylelint '**/*.svelte'",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"prepare": "husky install"
+	},
+	"lint-staged": {
+		"src/**/*.{svelte}": [
+			"stylelint --config .stylelintrc --quiet --fix",
+			"eslint --fix",
+			"prettier --write --cache"
+		],
+		"src/**/*.ts": [
+			"eslint --fix",
+			"prettier --write --cache"
+		],
+		"*.{js,jsx,json,html,yml,yaml,md}": [
+			"prettier --write --cache"
+		]
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
@@ -22,6 +37,8 @@
 		"eslint": "^8.36.0",
 		"eslint-config-prettier": "^8.7.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"husky": "^8.0.0",
+		"lint-staged": "^13.2.0",
 		"postcss-html": "^1.5.0",
 		"prettier": "^2.8.4",
 		"prettier-plugin-svelte": "^2.9.0",
