del plugin-search-dir option for prettier

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"lint": "prettier . --check . && eslint .",
 		"lint:css": "stylelint '**/*.svelte'",
-		"format": "prettier --plugin-search-dir . --write .",
+		"format": "prettier . --write .",
 		"prepare": "husky install"
 	},
 	"lint-staged": {
