add env vars and update imgs

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -21,6 +21,9 @@ jobs:
         run: npm ci
 
       - name: Build site
+        env:
+          BASE_PATH: '/spblpr'
+          ORIGIN_PATH: 'https://yslpn.github.io'
         run: npm run build
 
       - name: Deploy to GitHub Pages
