--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier . --check . && eslint .",
+		"lint:fix": "prettier . --write . && eslint . --fix",
 		"lint:css": "stylelint '**/*.svelte'",
 		"format": "prettier . --write .",
 		"prepare": "husky install"
@@ -29,33 +30,33 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/adapter-static": "^2.0.2",
+		"@sveltejs/adapter-static": "^2.0.3",
 		"@sveltejs/kit": "next",
-		"@types/qrcode": "^1.5.0",
-		"@typescript-eslint/eslint-plugin": "^5.59.0",
-		"@typescript-eslint/parser": "^5.59.0",
-		"eslint": "^8.38.0",
-		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-svelte3": "^4.0.0",
+		"@types/qrcode": "^1.5.2",
+		"@typescript-eslint/eslint-plugin": "^6.7.3",
+		"@typescript-eslint/parser": "^6.7.3",
+		"eslint": "^8.50.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-svelte": "^2.33.2",
 		"husky": "^8.0.3",
-		"lint-staged": "^13.2.1",
+		"lint-staged": "^14.0.1",
 		"postcss-html": "^1.5.0",
-		"prettier": "^2.8.7",
-		"prettier-plugin-svelte": "^2.10.0",
-		"qrcode": "^1.5.1",
-		"sass": "^1.62.0",
-		"stylelint": "^15.5.0",
+		"prettier": "^3.0.3",
+		"prettier-plugin-svelte": "^3.0.3",
+		"qrcode": "^1.5.3",
+		"sass": "^1.68.0",
+		"stylelint": "^15.10.3",
 		"stylelint-config-html": "^1.1.0",
-		"stylelint-config-recess-order": "^4.0.0",
-		"stylelint-config-standard-scss": "^8.0.0",
+		"stylelint-config-recess-order": "^4.3.0",
+		"stylelint-config-standard-scss": "^11.0.0",
 		"stylelint-order": "^6.0.3",
-		"stylelint-scss": "^4.6.0",
-		"svelte": "^3.58.0",
-		"svelte-check": "^3.2.0",
-		"svelte-preprocess": "^5.0.3",
-		"tslib": "^2.5.0",
-		"typescript": "^5.0.4",
-		"vite": "^4.2.2"
+		"stylelint-scss": "^5.2.1",
+		"svelte": "^4.2.1",
+		"svelte-check": "^3.5.2",
+		"svelte-preprocess": "^5.0.4",
+		"tslib": "^2.6.2",
+		"typescript": "^5.2.2",
+		"vite": "^4.4.9"
 	},
 	"type": "module"
 }
