--- a/package.json
+++ b/package.json
@@ -28,34 +28,33 @@
 		]
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/adapter-static": "^2.0.3",
-		"@sveltejs/kit": "next",
+		"@sveltejs/adapter-static": "^3.0.1",
+		"@sveltejs/kit": "^2.0.0",
 		"@types/qrcode": "^1.5.5",
-		"@typescript-eslint/eslint-plugin": "^6.11.0",
-		"@typescript-eslint/parser": "^6.11.0",
-		"eslint": "^8.53.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-svelte": "^2.35.0",
-		"husky": "^8.0.3",
-		"lint-staged": "^15.1.0",
-		"postcss-html": "^1.5.0",
-		"prettier": "^3.1.0",
-		"prettier-plugin-svelte": "^3.1.0",
+		"@typescript-eslint/eslint-plugin": "^7.0.2",
+		"@typescript-eslint/parser": "^7.0.2",
+		"eslint": "^8.57.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.35.1",
+		"husky": "^9.0.11",
+		"lint-staged": "^15.2.2",
+		"postcss-html": "^1.6.0",
+		"prettier": "^3.2.5",
+		"prettier-plugin-svelte": "^3.2.1",
 		"qrcode": "^1.5.3",
-		"sass": "^1.69.5",
-		"stylelint": "^15.11.0",
+		"sass": "^1.71.1",
+		"stylelint": "^16.2.1",
 		"stylelint-config-html": "^1.1.0",
-		"stylelint-config-recess-order": "^4.3.0",
-		"stylelint-config-standard-scss": "^11.1.0",
-		"stylelint-order": "^6.0.3",
-		"stylelint-scss": "^5.3.1",
-		"svelte": "^4.2.3",
-		"svelte-check": "^3.6.0",
-		"svelte-preprocess": "^5.1.0",
+		"stylelint-config-recess-order": "^4.6.0",
+		"stylelint-config-standard-scss": "^13.0.0",
+		"stylelint-order": "^6.0.4",
+		"stylelint-scss": "^6.1.0",
+		"svelte": "^4.2.12",
+		"svelte-check": "^3.6.4",
+		"svelte-preprocess": "^5.1.3",
 		"tslib": "^2.6.2",
-		"typescript": "^5.2.2",
-		"vite": "^4.5.0"
+		"typescript": "^5.3.3",
+		"vite": "^5.1.4"
 	},
 	"type": "module"
 }
