--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,10 +1,10 @@
 {
 	"extends": [
 		"stylelint-config-recess-order",
-		"stylelint-config-standard-scss",
+		"stylelint-config-standard",
 		"stylelint-config-html/svelte"
 	],
-	"plugins": ["stylelint-order", "stylelint-scss"],
+	"plugins": ["stylelint-order"],
 	"rules": {
 		"selector-pseudo-class-no-unknown": [
 			true,
