--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Build site
         env:
-          BASE_PATH: '/spblpr'
+          BASE_PATH: '/spblpr/'
           ORIGIN_PATH: 'https://yslpn.github.io'
         run: npm run build
 
