--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier . --check . && eslint .",
-		"lint:fix": "prettier . --write . && eslint . --fix",
-		"lint:css": "stylelint '**/*.svelte'",
+		"stylelint": "stylelint ./src/**/*.svelte --cache --cache-location ./node_modules/.cache/stylelint/",
+		"stylelint:fix": "npm run stylelint -- --fix",
+		"lint": "eslint ./src --cache --cache-location ./node_modules/.cache/eslint/",
+		"lint:fix": "npm run lint -- --fix",
+		"format": "prettier . --check --cache",
+		"format:fix": "npm run format -- --write",
 		"prepare": "husky install"
 	},
 	"lint-staged": {
@@ -28,31 +31,31 @@
 		]
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-static": "^3.0.1",
-		"@sveltejs/kit": "^2.5.2",
-		"@types/qrcode": "^1.5.5",
-		"@typescript-eslint/eslint-plugin": "^7.1.0",
-		"@typescript-eslint/parser": "^7.1.0",
-		"eslint": "^8.57.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.35.1",
-		"husky": "^9.0.11",
-		"lint-staged": "^15.2.2",
-		"postcss-html": "^1.6.0",
-		"prettier": "^3.2.5",
-		"prettier-plugin-svelte": "^3.2.2",
-		"qrcode": "^1.5.3",
-		"stylelint": "^16.2.1",
-		"stylelint-config-html": "^1.1.0",
-		"stylelint-config-recess-order": "^4.6.0",
-		"stylelint-config-standard": "^36.0.0",
-		"stylelint-order": "^6.0.4",
-		"svelte": "^4.2.12",
-		"svelte-check": "^3.6.6",
-		"svelte-preprocess": "^5.1.3",
-		"tslib": "^2.6.2",
-		"typescript": "^5.3.3",
-		"vite": "^5.1.4"
+		"@sveltejs/adapter-static": "3.0.1",
+		"@sveltejs/kit": "2.5.4",
+		"@types/qrcode": "1.5.5",
+		"@typescript-eslint/eslint-plugin": "7.3.1",
+		"@typescript-eslint/parser": "7.3.1",
+		"eslint": "8.57.0",
+		"eslint-config-prettier": "9.1.0",
+		"eslint-plugin-svelte": "2.35.1",
+		"husky": "9.0.11",
+		"lint-staged": "15.2.2",
+		"postcss-html": "1.6.0",
+		"prettier": "3.2.5",
+		"prettier-plugin-svelte": "3.2.2",
+		"qrcode": "1.5.3",
+		"stylelint": "16.2.1",
+		"stylelint-config-html": "1.1.0",
+		"stylelint-config-recess-order": "5.0.0",
+		"stylelint-config-standard": "36.0.0",
+		"stylelint-order": "6.0.4",
+		"svelte": "4.2.12",
+		"svelte-check": "3.6.8",
+		"svelte-preprocess": "5.1.3",
+		"tslib": "2.6.2",
+		"typescript": "5.4.3",
+		"vite": "5.2.4"
 	},
 	"type": "module"
 }
