Update environment variables and dependencies

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PUBLIC_ORIGIN_PATH=https://spblpr.org
-PUBLIC_BASE_PATH='' # A root-relative path that must start, but not end with /
+# PUBLIC_BASE_PATH=/base # A root-relative path that must start, but not end with /
