--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
 		"typescript": "5.4.3",
 		"vite": "5.2.7"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"dotenv": "16.4.5"
+	}
 }
