--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
 		"@types/qrcode": "1.5.5",
 		"@typescript-eslint/eslint-plugin": "7.4.0",
 		"@typescript-eslint/parser": "7.4.0",
+		"dotenv": "16.4.5",
 		"eslint": "8.57.0",
 		"eslint-config-prettier": "9.1.0",
 		"eslint-plugin-svelte": "2.35.1",
 		"husky": "9.0.11",
 		"lint-staged": "15.2.2",
+		"mdsvex": "0.11.0",
 		"postcss-html": "1.6.0",
 		"prettier": "3.2.5",
 		"prettier-plugin-svelte": "3.2.2",
@@ -57,8 +59,5 @@
 		"typescript": "5.4.3",
 		"vite": "5.2.7"
 	},
-	"type": "module",
-	"dependencies": {
-		"dotenv": "16.4.5"
-	}
+	"type": "module"
 }
