--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,9 +1,9 @@
 backend:
-  name: git-gateway
-
+  name: github
+  repo: yslpn/spblpr # Path to your GitHub repository
+publish_mode: editorial_workflow
 media_folder: 'static/images/uploads' # Media files will be stored in the repo under static/images/uploads
 public_folder: '/images/uploads' # The src attribute for uploaded media will begin with /images/uploads
-
 collections:
   - name: 'blog' # Used in routes, e.g., /admin/collections/blog
     label: 'Blog' # Used in the UI
