Update backend configuration in static/admin/config.yml and remove Netlify Identity script from static/admin/index.html

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,8 @@
+# backend:
+#   name: github
+#   repo: yslpn/spblpr # Path to your GitHub repository
 backend:
-  name: github
-  repo: yslpn/spblpr # Path to your GitHub repository
+  name: git-gateway
 publish_mode: editorial_workflow
 media_folder: 'static/images/uploads' # Media files will be stored in the repo under static/images/uploads
 public_folder: '/images/uploads' # The src attribute for uploaded media will begin with /images/uploads
